--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/eebad8c58c.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
     <title>Hello World</title>
   </head>
   <body>
     <h1>Hello world</h1>
-    <p>
-        Hi there
-    </p>
+    <p>Hi there</p>
   </body>
 </html>
