--- a/index.html
+++ b/index.html
@@ -4,33 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World</title>
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-     <script
+    <script
       src="https://kit.fontawesome.com/eebad8c58c.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles/portfolio.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+
+    <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
-    <p>Hi there</p>
+    <div class="hero">
+      <p>👋 Hello, I am</p>
+      <h1>Kenya Johnson</h1>
+      <div class="mb-3">
+        <h2>Front-end Developer based in America</h2>
+      </div>
+      <a href="" class="btn btn-branding">Contact me</a>
+    </div>
   </body>
 </html>
