--- a/work.html
+++ b/work.html
@@ -32,8 +32,48 @@
   <body>
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-4">Hi I am Kenya Johnson</h1>
-    </div>
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/yogurt-image.png"
+              alt="screenshot of yogurt app"
+              class="img-fluid mb-3"
+            />
+            <h3 class="m-0">Yogurt Project</h3>
+            <p class="content-work-paragraph text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/weather-app-image.png"
+              alt="screenshot of weather app"
+              class="img-fluid mb-3"
+            />
+            <h3 class="m-0">Weather App</h3>
+            <p class="content-work-paragraph text-muted">Built with HTML and CSS</p>
+          </div>
+        </div>
+         <div class="row">
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/dictionary-app-image.png"
+              alt="screenshot of dictionary app"
+              class="img-fluid mb-3"
+            />
+            <h3 class="m-0">Dictionary App</h3>
+            <p class="content-work-paragraph text-muted">Built with HTML, CSS with React</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/translation-app.png"
+              alt="screenshot of translation app"
+              class="img-fluid mb-3"
+            />
+            <h3 class="m-0">Translation App</h3>
+            <p class="content-work-paragraph text-muted">Built with HTML, CSS with React</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
