Added footer and styling

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         <h1 class="mb-5">Lets get in touch!</h1>
         <h3>Email</h3>
         <p>
-            <a href="mailto:kjohnson28@gmail.com">kjohnson28@gmail.com</a>
+            <a href="mailto:kjohnson28@gmail.com" target="_blank">kjohnson28@gmail.com</a>
         </p>
         <h3>Twitter</h3>
         <p>
