--- a/work.html
+++ b/work.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World</title>
+    <title>Kenya's Work Page</title>
+    <meta name="description" content="This page showcases all of the projects that Kenya has worked on since starting the SheCodes front-end web developer bootcamp.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,6 +31,36 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/shecodes-logo.png"
+            alt="SheCodes Logo"
+            class="logo d-none d-md-block"
+          />
+          <img
+            src="images/shecodes-logo-small.png"
+            alt="Small SheCodes Logo"
+            class="logo d-block d-md-none"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage">Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About Page">About</a>
+          </li>
+          <li class="active">
+            <a href="/work.html" title="Work Page">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Page">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
@@ -37,7 +68,7 @@
           <div class="col-md-6 mb-4">
             <img
               src="images/yogurt-image.png"
-              alt="screenshot of yogurt app"
+              alt="Yogurt app preview"
               class="img-fluid mb-3"
             />
             <h3 class="m-0">Yogurt Project</h3>
@@ -46,7 +77,7 @@
           <div class="col-md-6 mb-4">
             <img
               src="images/weather-app-image.png"
-              alt="screenshot of weather app"
+              alt="Weather app preview"
               class="img-fluid mb-3"
             />
             <h3 class="m-0">Weather App</h3>
@@ -57,7 +88,7 @@
           <div class="col-md-6 mb-4">
             <img
               src="images/dictionary-app-image.png"
-              alt="screenshot of dictionary app"
+              alt="Dictionary app preview"
               class="img-fluid mb-3"
             />
             <h3 class="m-0">Dictionary App</h3>
@@ -66,7 +97,7 @@
           <div class="col-md-6 mb-4">
             <img
               src="images/translation-app.png"
-              alt="screenshot of translation app"
+              alt="Translation app preview"
               class="img-fluid mb-3"
             />
             <h3 class="m-0">Translation App</h3>
@@ -75,5 +106,51 @@
         </div>
       </div>
     </div>
+     <footer class="container">
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Let's work together!</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding mb-3" title="Contact Kenya">Let's talk here</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:kjohnson28@gmail.com" 
+          class="email-link"
+          title="Email Kenya"
+            >kjohnson28@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a 
+          href="htts://www.instagram.com/kjohnson_codes" 
+          target="_blank"
+          title="Instagram Profile"
+            ><i class="fa-brands fa-instagram"></i
+          >
+        </a>
+          <a 
+          href="https://github.com/KenJohn28" 
+          target="_blank"
+          title="Github Profile"
+            ><i class="fa-brands fa-github"></i
+          >
+        </a>
+          <a 
+          href="https://www.twitter.com/KJohnsonCodes" 
+          target="_blank"
+          title="Twitter Profile"
+            ><i class="fa-brands fa-twitter"></i
+          >
+        </a>
+        </div>
+        <p class="text-center mt-4 text-muted">
+            This project was coded by Kenya, and it is <a href="https://github.com/KenJohn28/portfolio-project" target="_blank" title="Github Repository">open-sourced</a>.
+        </p>
+      </footer>
   </body>
 </html>
