Made updates to web content
Also improved webpages to be more SEO friendly

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
       <div class="mb-5">
         <h2>Front-end Developer based in America</h2>
       </div>
-      <a href="/contact.html" class="btn btn-branding" title="Contact Me">Contact me</a>
+      <a href="/contact.html" class="btn btn-branding" title="Contact Me"
+        >Contact me</a
+      >
     </div>
     <p class="text-center m-5">Featured projects since learning to code</p>
     <div class="container">
@@ -86,12 +88,24 @@
           <div class="project-description">
             <h2 class="mb-5">Yogurt Project</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              The ultimate app for yogurt enthusiasts and health-conscious
+              individuals. This app offers a rich collection of delicious
+              yogurt-based recipes, detailed nutritional information, and
+              personalized meal plans to fit any dietary preference. My app
+              features user reviews, expert recommendations, and exclusive deals
+              to help you discover the best yogurt products on the market.
+              Engage with a vibrant community through forums and social media
+              integration, and track your health and wellness goals with our
+              intuitive tools. Whether you're a yogurt aficionado or looking to
+              incorporate healthier options into your diet, my yogurt app is
+              your go-to resource for all things yogurt.
             </p>
-            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+            <a
+              href="/work.html"
+              class="btn btn-branding-outline"
+              title="View my yogurt app"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
@@ -100,12 +114,21 @@
           <div class="project-description">
             <h2 class="mb-5">Weather Project</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              My weather app provides real-time weather forecasts, detailed
+              hourly and weekly outlooks, and severe weather alerts to keep you
+              prepared for any condition. With interactive radar maps,
+              personalized weather notifications, and insights into local
+              climate trends, this app ensures you have all the information you
+              need at your fingertips. Whether you're planning your day, week,
+              or a trip, trust WeatherWise to keep you informed and ahead of the
+              weather.
             </p>
-            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+            <a
+              href="/work.html"
+              class="btn btn-branding-outline"
+              title="View my weather app"
+              >Learn more</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -128,12 +151,20 @@
           <div class="project-description">
             <h2 class="mb-5">Dictionary Project</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              My dictionary offers comprehensive definitions, synonyms,
+              antonyms, and example sentences for a vast array of words. With
+              advanced search capabilities, pronunciation guides, and daily word
+              features, my app is your go-to resource for precise and
+              accessible language information. Whether you're a student, writer,
+              or language enthusiast, WordMaster helps you explore the richness
+              of the English language with ease and confidence.
             </p>
-            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+            <a
+              href="/work.html"
+              class="btn btn-branding-outline"
+              title="View my dictionary app"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
@@ -146,41 +177,50 @@
             <p class="text-muted">Let's work together!</p>
           </div>
           <div>
-            <a href="/contact.html" class="btn btn-branding mb-3" title="Contact Kenya">Let's talk here</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mb-3"
+              title="Contact Kenya"
+              >Let's talk here</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:kjohnson28@gmail.com" 
-          class="email-link"
-          title="Email Kenya"
+          <a
+            href="mailto:kjohnson28@gmail.com"
+            class="email-link"
+            title="Email Kenya"
             >kjohnson28@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a 
-          href="htts://www.instagram.com/kjohnson_codes" 
-          target="_blank"
-          title="Instagram Profile"
-            ><i class="fa-brands fa-instagram"></i
-          >
-        </a>
-          <a 
-          href="https://github.com/KenJohn28" 
-          target="_blank"
-          title="Github Profile"
-            ><i class="fa-brands fa-github"></i
-          >
-        </a>
-          <a 
-          href="https://www.twitter.com/KJohnsonCodes" 
-          target="_blank"
-          title="Twitter Profile"
-            ><i class="fa-brands fa-twitter"></i
-          >
-        </a>
+          <a
+            href="htts://www.instagram.com/kjohnson_codes"
+            target="_blank"
+            title="Instagram Profile"
+            ><i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://github.com/KenJohn28"
+            target="_blank"
+            title="Github Profile"
+            ><i class="fa-brands fa-github"></i>
+          </a>
+          <a
+            href="https://www.twitter.com/KJohnsonCodes"
+            target="_blank"
+            title="Twitter Profile"
+            ><i class="fa-brands fa-twitter"></i>
+          </a>
         </div>
         <p class="text-center mt-4 text-muted">
-            This project was coded by Kenya, and it is <a href="https://github.com/KenJohn28/portfolio-project" target="_blank" title="Github Repository">open-sourced</a>.
+          This project was coded by Kenya, and it is
+          <a
+            href="https://github.com/KenJohn28/portfolio-project"
+            target="_blank"
+            title="Github Repository"
+            >open-sourced</a
+          >.
         </p>
       </footer>
     </div>
