--- a/about.html
+++ b/about.html
@@ -69,12 +69,15 @@
         <div class="col-lg-6">
           <div class="content">
             <h1 class="mb-4">Hi I am Kenya Johnson</h1>
-            <h2 class="mb-4">Front-end developer based in America</h2>
+            <h2 class="mb-4">Front-end developer based in Raleigh, NC</h2>
             <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+              I am a senior data analyst at an adtech company, leveraging my
+              expertise in data analytics and business intelligence. In 2022, I
+              earned my MBA with a concentration in these fields, which has
+              further enhanced my analytical skills and business acumen.
+              Currently, I am pivoting towards a career in front-end web
+              development, driven by a passion for coding and creating
+              interactive digital experiences.
             </p>
             <a
               href="index.html"
