Updated homepage content

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <p>👋 Hello, I am</p>
       <h1>Kenya Johnson</h1>
       <div class="mb-5">
-        <h2>Front-end Developer based in America</h2>
+        <h2>Front-end Developer based in America 🇺🇸</h2>
       </div>
       <a href="/contact.html" class="btn btn-branding" title="Contact Me"
         >Contact me</a
@@ -88,17 +88,13 @@
           <div class="project-description">
             <h2 class="mb-5">Yogurt Project</h2>
             <p class="mb-5 text-muted">
-              The ultimate app for yogurt enthusiasts and health-conscious
-              individuals. This app offers a rich collection of delicious
-              yogurt-based recipes, detailed nutritional information, and
-              personalized meal plans to fit any dietary preference. My app
-              features user reviews, expert recommendations, and exclusive deals
-              to help you discover the best yogurt products on the market.
-              Engage with a vibrant community through forums and social media
-              integration, and track your health and wellness goals with our
-              intuitive tools. Whether you're a yogurt aficionado or looking to
-              incorporate healthier options into your diet, my yogurt app is
-              your go-to resource for all things yogurt.
+              My yougurt app offers a collection of delicious yogurt-based
+              recipes and detailed nutritional information. My app features user
+              reviews, expert recommendations, and exclusive deals to help you
+              discover the best yogurt products on the market. Whether you're a
+              yogurt aficionado or looking to incorporate healthier options into
+              your diet, this app is your go-to resource for all things
+              yogurt.
             </p>
             <a
               href="/work.html"
@@ -116,12 +112,9 @@
             <p class="mb-5 text-muted">
               My weather app provides real-time weather forecasts, detailed
               hourly and weekly outlooks, and severe weather alerts to keep you
-              prepared for any condition. With interactive radar maps,
-              personalized weather notifications, and insights into local
+              prepared for any condition. With insights into local
               climate trends, this app ensures you have all the information you
-              need at your fingertips. Whether you're planning your day, week,
-              or a trip, trust WeatherWise to keep you informed and ahead of the
-              weather.
+              need at your fingertips. 
             </p>
             <a
               href="/work.html"
@@ -151,13 +144,11 @@
           <div class="project-description">
             <h2 class="mb-5">Dictionary Project</h2>
             <p class="mb-5 text-muted">
-              My dictionary offers comprehensive definitions, synonyms,
+              My dictionary app offers comprehensive definitions, synonyms,
               antonyms, and example sentences for a vast array of words. With
               advanced search capabilities, pronunciation guides, and daily word
-              features, my app is your go-to resource for precise and
-              accessible language information. Whether you're a student, writer,
-              or language enthusiast, WordMaster helps you explore the richness
-              of the English language with ease and confidence.
+              features, my app is your go-to resource for precise and accessible
+              language information.
             </p>
             <a
               href="/work.html"
