Made a grammatical correction

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="project-description">
             <h2 class="mb-5">Yogurt Project</h2>
             <p class="mb-5 text-muted">
-              My yougurt app offers a collection of delicious yogurt-based
+              My yogurt app offers a collection of delicious yogurt-based
               recipes and detailed nutritional information. My app features user
               reviews, expert recommendations, and exclusive deals to help you
               discover the best yogurt products on the market. Whether you're a
